--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 attrs~=21.4.0
 libcst~=0.3.13
-pandas~=1.1.3
-numpy~=1.16.6
+pandas
+numpy
 pytest
 nbconvert~=6.4.0
 IPython~=7.18.1
@@ -11,5 +11,4 @@ sortedcontainers~=2.2.2
 matplotlib~=3.2.1
 seaborn~=0.10.0
 scikit-learn~=0.21.3
-
 openai
