--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7]
@@ -26,4 +27,4 @@ jobs:
       env:
         OPENAI_KEY: ${{ secrets.OPENAI_KEY_RBAVISHI }}
       run: |
-        pytest
+        pytest -s tests
