Add WIP for callbacks from JS to Python

--- a/databutler_widgets/tsconfig.json
+++ b/databutler_widgets/tsconfig.json
@@ -7,13 +7,13 @@
     "moduleResolution": "node",
     "jsx": "react",
     "noEmitOnError": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "outDir": "lib",
     "resolveJsonModule": true,
     "rootDir": "src",
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
+    "strict": false,
     "strictPropertyInitialization": false,
     "target": "es2015",
     "types": ["jest"]
