--- a/databutler_widgets/package.json
+++ b/databutler_widgets/package.json
@@ -50,8 +50,10 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2.0.0 || ^3.0.0 || ^4.0.0",
+    "prismjs": "^1.26.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-simple-code-editor": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
@@ -61,9 +63,9 @@
     "@jupyterlab/builder": "^3.0.0",
     "@phosphor/application": "^1.6.0",
     "@phosphor/widgets": "^1.6.0",
-    "@types/react-dom": "^17.0.8",
-    "@types/react": "^17.0.11",
     "@types/jest": "^26.0.0",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
