--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         pip install -v -e databutler_widgets
         pip install -e .
     - name: Python Style Checker
+      if: matrix.os == 'ubuntu-latest'
       uses: quentinguidee/pep8-action@v1
       with:
         arguments: '--max-line-length=120 --ignore=E722,W293'
