--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,6 +12,7 @@ intervaltree~=3.1.0
 sortedcontainers~=2.2.2
 matplotlib~=3.2.1
 seaborn~=0.10.0
+scikit-learn~=0.21.3
 openai
 transformers
 pebble
